--- a/frontend/src/pages/homePage/hero-section.css
+++ b/frontend/src/pages/homePage/hero-section.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../../images/backgroundImg.png");
+  background-image: url("../../images/background-img.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
