--- a/frontend/src/pages/homePage/hero-section.css
+++ b/frontend/src/pages/homePage/hero-section.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.hero {
+.hero-section {
   position: relative;
   height: 100vh;
   display: flex;
@@ -17,7 +17,7 @@
   overflow: hidden;
 }
 
-.hero::after {
+.hero-section::after {
   content: "";
   position: absolute;
   left: 0;
@@ -28,7 +28,7 @@
   pointer-events: none;
 }
 
-.hero::before {
+.hero-section::before {
   content: "";
   position: absolute;
   inset: 0;
