--- a/frontend/src/pages/homePage/latestItems-section.css
+++ b/frontend/src/pages/homePage/latestItems-section.css
@@ -1,5 +1,15 @@
-/* .section-light {
+.latestItems-section {
+  padding: 7rem 0 1rem;
 }
 
-.section-muted {
-} */
+@media (max-width: 575px) {
+  .latestItems-section {
+    padding-top: 4.5rem;
+  }
+}
+
+.requests {
+}
+
+.Offers {
+}
