deleted authModal and create pages-SignIn,SignUp,EditUser

--- a/frontend/src/components/RequestCard/request-card.css
+++ b/frontend/src/components/RequestCard/request-card.css
@@ -62,7 +62,7 @@
   font-size: 0.95rem;
   line-height: 1.4;
   color: #4b5563;
-
+  margin-bottom: 0;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
