--- a/frontend/src/pages/CreateOffer/create-offer.css
+++ b/frontend/src/pages/CreateOffer/create-offer.css
@@ -1,4 +1,4 @@
-.create-request-page {
+/* .create-request-page {
   padding: 5rem 5rem 10rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -103,4 +103,4 @@
   .form-input {
     font-size: 0.8rem;
   }
-}
+} */
