--- a/frontend/src/pages/SignUp/sign-up.css
+++ b/frontend/src/pages/SignUp/sign-up.css
@@ -1,8 +1,16 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 5px;
   text-align: center;
+  max-width: 600px;
+  margin: 5rem auto;
+  background-color: #ffffff;
+  width: 90%;
+  padding: 3rem 2.5rem;
+  border-radius: 16px;
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.12);
+  gap: 20px;
+  transition: all 0.3s ease;
 }
 
 .form-title {
