--- a/frontend/src/pages/requestsPage/requests-page.css
+++ b/frontend/src/pages/requestsPage/requests-page.css
@@ -1,7 +1,7 @@
 .requests-page {
   max-width: 1450px;
   margin: 0 auto;
-  padding: 0 0.5rem 4rem;
+  padding: 0 0.5rem 6rem;
   direction: rtl;
   font-family: "Segoe UI", Arial, sans-serif;
 }
@@ -168,15 +168,15 @@
   padding: 0.7rem 1.6rem;
   font-size: 1rem;
   font-weight: 600;
-  color: #000;
-  background-color: #f9d923;
+  color: #fff;
+  background-color: #684040;
   border: none;
   border-radius: 8px;
   cursor: pointer;
 }
 
 .no-results-btn:hover {
-  background-color: #ffea4d;
+  background-color: #3e2626;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
 }
 
